fixed minor bugs with jump issues and kick issues. also started prototype for punch detection

--- a/styles.css
+++ b/styles.css
@@ -35,7 +35,6 @@ body {
 	position: absolute;
 	top: 200px;
 	left: 600px;
-	animation: c2kick infinite;
 }
 
 @keyframes jump {
